fixed trips by experience route
